# openai-realtime-rs

./: Cargo.toml  README.md
spec/: Specification.md  api.js  client.js  conversation.js  event_handler.js  utils.js
src/: api.rs  client.rs  client_inner.rs  conversation.rs  event.rs  item.rs  iter.rs  lib.rs  player.rs  recorder.rs  session.rs  tool_handler.rs  types.rs  utils.rs
src/tests/: api.rs  audio.rs  client.rs  mod.rs
