[package]
name = "parture_openai_realtime_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ndarray = "0.15.3"
base64 = "0.21.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { workspace=true }
serde_json = {workspace = true}
#tungstenite = "0.17"
anyhow = "1.0.89"
log = "0.4.22"
chrono = "0.4.38"
rand = "0.8.5"
futures-util = "0.3.30"
tokio-tungstenite = { version="0.24.0", features=["native-tls"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
tap = "1.0.1"
async-recursion = "1.1.1"
rodio = "0.19.0"
enum_variant_macros = "0.3.0"
cpal = "0.15.3"
voice_activity_detector = { version="0.1.1", features=["async"] }
rubato = "0.15"
realfft = "3.3.0"